--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: themed
-description: Themed
-version: 2.0.0
+description: The themed package lets you define a theme with const values, and then, by using some dark Dart magic, go and change them dynamically anyway.
+
+version: 2.0.1
 homepage: https://github.com/marcglasberg/themed
 
 environment:
