--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: themed
 description: The themed package lets you define a theme with const values, and then, by using some dark Dart magic, go and change them dynamically anyway.
-version: 3.0.0
+version: 3.0.1
 homepage: https://github.com/marcglasberg/themed
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: '>=2.15.0 <3.0.0'
   flutter: ">=2.8.1"
 
 dependencies:
