--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
 
 dependencies:
   themed:
@@ -17,3 +17,4 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  uses-material-design: true
